# Ego-R1

./: .gitignore  LICENSE  README.md  index.html
Ego-R1-Agent/: .gitignore  README.md  environment.yml
Ego-R1-Agent/ego_r1/llm_agent/: generation.py
Ego-R1-Agent/ego_r1/search/: build_index.sh
Ego-R1-Agent/eval/: infer.py  infer_bench_summ.py  infer_bench_summ.sh  infer_summ.py
Ego-R1-Agent/utils/: constants.py  process.py  serve.sh
api/rag/: .gitignore  api_A1.py  api_A2.py  api_A3.py  api_A4.py  api_A5.py  api_A6.py  api_for_egolife.py  api_for_egoschema.py  api_for_videomme.py  pyproject.toml
api/rag/configs/: egolife.yaml
api/rag/r1rag/: prompts.py  ragagent.py  utils.py
api/visual_tools/: configs.yaml
api/visual_tools/egor1_videollm_gemini/: api.py  utils.py  video_llm.py
api/visual_tools/egor1_videollm_llava/: api.py  llava_video.py  utils.py  video_llm.py
api/visual_tools/egor1_vlm/: api.py  utils.py  vlm.py
api/visual_tools/egoschema_videollm_gemini/: api.py  utils.py  video_llm.py
api/visual_tools/egoschema_videollm_llava/: api.py  utils.py
api/visual_tools/egoschema_vlm/: api.py  utils.py  vlm.py
api/visual_tools/videomme_videollm_gemini/: api.py  utils.py  video_llm.py
api/visual_tools/videomme_videollm_llava/: api.py  llava_video.py  utils.py  video_llm.py
api/visual_tools/videomme_vlm/: api.py  utils.py
cott_gen/: __init__.py  data_statistics.py  environment.yml  main.py  postprocess.py  prompts.py  sample.py  tools.py  utils.py
static/css/: bulma-carousel.min.css  index.css
